fix(style): improve the `in(dark-mode)` mixin to fully support dark mode
Now any usage of this `mixin` will automatically
also cover the `force-dark` and `force-light`
combinations with `prefers-color-scheme: dark`
and `prefers-color-scheme: light`.

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -14,8 +14,22 @@
 @mixin in($media) {
     @if $media == dark-mode {
         @media (prefers-color-scheme: dark) {
+            :root:not([data-theme='force-light']) {
+                @content;
+            }
+        }
+        :root[data-theme='force-dark'] {
             @content;
         }
+
+        // @media (prefers-color-scheme: dark) {
+        //     :host(:not([data-theme='force-light'])) & {
+        //         @content;
+        //     }
+        // }
+        // :host([data-theme='force-dark']) & {
+        //     @content;
+        // }
     }
 }
 
